--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,59 @@ html, body {
 }
 
 body {
-  background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
-  overflow: hidden;
+  background: linear-gradient(to left, #262a2f 0%, #090A0F 50%, #1B2735 100%);
 }
 
-#stars {
+#background {
+  pointer-events: none;
+}
+#background #stars {
   position: fixed;
+}
+
+#arrow {
+  position: fixed;
+  bottom: 30px;
+  width: 100%;
+}
+#arrow img {
+  display: flex;
+  position: relative;
+  margin: 0 auto;
+}
+#arrow .topArw {
+  animation: topSpin linear infinite 2s;
+}
+#arrow .btmArw {
+  animation: botSpin linear infinite 2s;
+}
+@keyframes topSpin {
+  0% {
+    transform: rotateY(0deg);
+    top: 2px;
+  }
+  50% {
+    transform: rotateY(180deg);
+    top: 5px;
+  }
+  100% {
+    transform: rotateY(0deg);
+    top: 2px;
+  }
+}
+@keyframes botSpin {
+  0% {
+    transform: rotateY(0deg);
+    bottom: 3px;
+  }
+  50% {
+    transform: rotateY(-180deg);
+    bottom: 7px;
+  }
+  100% {
+    transform: rotateY(0deg);
+    bottom: 3px;
+  }
 }
 
 header {
@@ -27,9 +74,10 @@ header .navi {
   margin-top: 20px;
 }
 header .navi .ttl {
-  width: 30%;
+  width: 28%;
   text-align: center;
   border-bottom: 3px solid #C11717;
+  font-size: 1rem;
 }
 header .navi .gblNavi ul {
   display: flex;
@@ -45,6 +93,7 @@ header .navi .gblNavi ul li {
 header .navi .gblNavi ul li a {
   display: block;
   text-decoration: none;
+  border-bottom: 2px solid #C11717;
   color: #F5f5f5;
   background-image: linear-gradient(#C11717 0 0);
   background-size: 200% 0.08em;
@@ -61,16 +110,19 @@ header .navi .gblNavi ul li a:hover {
 main {
   width: 100%;
 }
-main #mainTxt {
+main .mainVis {
+  height: 88vh;
+}
+main .mainVis #mainTxt {
   top: 10rem;
   left: 10%;
   position: relative;
   width: 50%;
 }
-main #mainTxt h2 {
+main .mainVis #mainTxt h2 {
   font-size: 3rem;
 }
-main #mainTxt p {
+main .mainVis #mainTxt p {
   font-size: 1.7rem;
 }
 
