--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
-html,body {
+html,
+body {
     font-size: 140%;
     color: #F5f5f5;
     height: 100%;
@@ -6,55 +7,65 @@ html,body {
 }
 
 body {
-    background: linear-gradient(to left, #262a2f 0%, #090A0F 50% , #1B2735 100%,  );
+    background: linear-gradient(to left, #262a2f 0%, #090A0F 50%, #1B2735 100%, );
 }
 
-#background{
+#background {
     pointer-events: none;
-    #stars{
+
+    #stars {
         position: fixed;
     }
 }
 
-#arrow{
+#arrow {
     position: fixed;
     bottom: 30px;
     width: 100%;
-    img{
+
+    img {
         display: flex;
         position: relative;
         margin: 0 auto;
     }
-    .topArw{
+
+    .topArw {
         animation: topSpin linear infinite 2s;
     }
-    .btmArw{
+
+    .btmArw {
         animation: botSpin linear infinite 2s;
     }
+
     @keyframes topSpin {
-        0%{
+        0% {
             transform: rotateY(0deg);
             top: 2px;
         }
-        50%{
+
+        50% {
             transform: rotateY(180deg);
             top: 5px;
         }
-        100%{
+
+        100% {
             transform: rotateY(0deg);
             top: 2px;
         }
     }
+
     @keyframes botSpin {
-        0%{
+        0% {
             transform: rotateY(0deg);
             bottom: 3px;
         }
-        50%{
+
+        50% {
             transform: rotateY(-180deg);
             bottom: 7px;
         }
-        100%{
+
+        100% {
             transform: rotateY(0deg);
             bottom: 3px;
         }
@@ -62,29 +73,32 @@ body {
 }
 
 header {
-    width: 100%;
+    width: 75%;
+    margin: 0 auto;
     height: 100px;
     padding: 10px;
 
     .navi {
         display: flex;
         flex-wrap: nowrap;
-        justify-content: space-around;
         align-items: center;
         margin-top: 20px;
 
         .ttl {
-            width: 28%;
+            position: relative;
+            width: 30%;
             text-align: center;
             border-bottom: 3px solid #C11717;
             font-size: 1rem;
         }
 
         .gblNavi {
+            position: fixed;
+            right: 190px;
 
             ul {
                 display: flex;
-                gap: 50px;
+                gap: 30px;
                 list-style: none;
                 font-size: 1.3rem;
 
@@ -120,22 +134,53 @@ header {
 
 
 main {
-    width: 100%;
+    width: 70%;
+    height: 100%;
+    margin: 0 auto;
 
-    .mainVis{
-        height: 88vh;
+    .mainVis {
+        height: 100vh;
+
         #mainTxt {
-            top: 10rem;
-            left: 10%;
+            top: 15rem;
             position: relative;
             width: 50%;
+
             h2 {
                 font-size: 3rem;
             }
-    
+
             p {
                 font-size: 1.7rem;
             }
         }
+    }
+
+    .aboutWrap {
+        height: 100vh;
+        margin: 0 auto;
+
+        .aboutTtl {
+            font-size: 1.2rem;
+            border-bottom: #C11717 3px solid;
+            width: 8%;
+            text-align: center;
+        }
+
+        .aboutMain {
+            width: 100%;
+            height: 100%;
+            padding: 20px;
+            border: solid 1px skyblue;
+
+            .aboutPic {
+                border: #F5f5f5 solid 3px;
+                border-radius: 10px;
+                width: 300px;
+                height: 460px;
+                background: url(../img/main.jpeg) left top/cover;
+            }
+        }
+
     }
 }
