--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,11 @@ body {
   }
 }
 
+.clear {
+  height: 200px;
+  width: 100%;
+}
+
 header {
   width: 75%;
   margin: 0 auto;
@@ -84,6 +89,7 @@ header .navi .ttl {
 header .navi .gblNavi {
   position: fixed;
   right: 190px;
+  z-index: 1000;
 }
 header .navi .gblNavi ul {
   display: flex;
@@ -132,28 +138,77 @@ main .mainVis #mainTxt h2 {
 main .mainVis #mainTxt p {
   font-size: 1.7rem;
 }
-main .aboutWrap {
-  height: 100vh;
+main #aboutWrap {
+  height: 80vh;
   margin: 0 auto;
+  padding: 20px;
 }
-main .aboutWrap .aboutTtl {
+main #aboutWrap .aboutTtl {
   font-size: 1.2rem;
   border-bottom: #C11717 3px solid;
   width: 8%;
   text-align: center;
 }
-main .aboutWrap .aboutMain {
+main #aboutWrap .aboutMain {
   width: 100%;
   height: 100%;
   padding: 20px;
-  border: solid 1px skyblue;
+  display: flex;
 }
-main .aboutWrap .aboutMain .aboutPic {
+main #aboutWrap .aboutMain .aboutPic {
   border: #F5f5f5 solid 3px;
   border-radius: 10px;
-  width: 300px;
-  height: 460px;
+  width: 350px;
+  height: 550px;
   background: url(../img/main.jpeg) left top/cover;
+  margin: 0 auto;
+}
+main #aboutWrap .aboutMain .aboutMe {
+  width: 55%;
+  height: 100%;
+}
+main #aboutWrap .aboutMain .aboutMe p {
+  font-family: "DotGothic16", sans-serif;
+  width: 80%;
+  margin: 0 auto;
+  height: 100%;
+  font-size: 1.3rem;
+}
+main #profWrap {
+  height: 100vh;
+  margin: 0 auto;
+}
+main #profWrap .profTtl {
+  font-size: 1.2rem;
+  border-bottom: #C11717 3px solid;
+  width: 10%;
+  text-align: center;
+}
+main .profMain {
+  font-size: 1.2rem;
+}
+main .profMain .classtype {
+  color: #C11717;
+}
+main #worksWrap {
+  margin: 0 auto;
+}
+main #worksWrap .worksttl {
+  border-bottom: 3px #C11717 solid;
+  width: 10%;
+  text-align: center;
+}
+main #worksWrap .worksmain {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 30px;
+}
+main #worksWrap .worksmain figure {
+  width: 100%;
+}
+main #worksWrap .worksmain figure img {
+  width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
