--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ header .navi .ttl {
   width: 30%;
   text-align: center;
   border-bottom: 3px solid #C11717;
-  font-size: 1rem;
+  font-size: 1.1rem;
 }
 header .navi .gblNavi {
   position: fixed;
@@ -139,7 +139,8 @@ main .mainVis #mainTxt p {
   font-size: 1.7rem;
 }
 main #aboutWrap {
-  height: 80vh;
+  width: 100%;
+  height: 70vh;
   margin: 0 auto;
   padding: 20px;
 }
@@ -148,12 +149,26 @@ main #aboutWrap .aboutTtl {
   border-bottom: #C11717 3px solid;
   width: 8%;
   text-align: center;
+  margin-bottom: 20px;
 }
 main #aboutWrap .aboutMain {
   width: 100%;
   height: 100%;
-  padding: 20px;
   display: flex;
+}
+main #aboutWrap .aboutMain .aboutMe {
+  width: 55%;
+  height: 50%;
+  margin: auto 10;
+  position: relative;
+  top: 15%;
+}
+main #aboutWrap .aboutMain .aboutMe p {
+  font-family: "DotGothic16", sans-serif;
+  width: 80%;
+  margin: 0 auto;
+  height: 100%;
+  font-size: 1rem;
 }
 main #aboutWrap .aboutMain .aboutPic {
   border: #F5f5f5 solid 3px;
@@ -163,40 +178,73 @@ main #aboutWrap .aboutMain .aboutPic {
   background: url(../img/main.jpeg) left top/cover;
   margin: 0 auto;
 }
-main #aboutWrap .aboutMain .aboutMe {
-  width: 55%;
-  height: 100%;
-}
-main #aboutWrap .aboutMain .aboutMe p {
-  font-family: "DotGothic16", sans-serif;
-  width: 80%;
-  margin: 0 auto;
-  height: 100%;
-  font-size: 1.3rem;
-}
 main #profWrap {
-  height: 100vh;
+  width: 100%;
+  height: 70vh;
   margin: 0 auto;
+  padding: 20px;
 }
 main #profWrap .profTtl {
   font-size: 1.2rem;
   border-bottom: #C11717 3px solid;
   width: 10%;
   text-align: center;
+  margin-bottom: 20px;
 }
 main .profMain {
   font-size: 1.2rem;
 }
-main .profMain .classtype {
-  color: #C11717;
+main .profMain .classwrap {
+  position: relative;
+  z-index: 2;
+  left: 5%;
+}
+main .profMain .classwrap::before {
+  content: attr(data-value);
+  display: block;
+  width: 20px;
+  height: 100%;
+  position: absolute;
+  left: -50px;
+  margin: auto;
+  text-align: end;
+}
+main .profMain .classwrap .classcode {
+  display: block;
+  width: 100%;
+}
+main .profMain .classwrap .classcode:hover {
+  background: #1f2935;
+}
+main .profMain .classwrap .classcode .classbrckt {
+  color: #e5c07b;
+}
+main .profMain .classwrap .classcode .classtype {
+  color: #61afef;
+}
+main .profMain .classwrap .classcode .classel {
+  color: #e06c75;
+}
+main .profMain .classwrap .classcode .classprod {
+  color: #c678dd;
+}
+main .profMain .classwrap .classcode .classhead {
+  color: #98c379;
+}
+main .profMain .classwrap .classcode .classrtrn {
+  color: #55c9ba;
 }
 main #worksWrap {
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
+  padding: 20px;
 }
 main #worksWrap .worksttl {
   border-bottom: 3px #C11717 solid;
   width: 10%;
   text-align: center;
+  margin-bottom: 20px;
 }
 main #worksWrap .worksmain {
   display: grid;
