--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,7 @@ main .profMain .classwrap::before {
 }
 main .profMain .classwrap .classcode {
   display: block;
-  width: 100%;
+  width: 90%;
 }
 main .profMain .classwrap .classcode:hover {
   background: #1f2935;
@@ -250,13 +250,124 @@ main #worksWrap .worksmain {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  gap: 30px;
+  gap: 50px;
 }
 main #worksWrap .worksmain figure {
   width: 100%;
 }
 main #worksWrap .worksmain figure img {
   width: 100%;
+}
+main #worksWrap .worksmain .work1 figure {
+  background: url(../img/logo/chittle.png) left top/cover no-repeat;
+  border: dashed 5px #33a864;
+}
+main #worksWrap .worksmain .work1 figure img {
+  transition: 0.3s ease-in-out;
+  opacity: 0;
+  display: block;
+}
+main #worksWrap .worksmain .work1 figure:hover img {
+  opacity: 1;
+}
+main #worksWrap .worksmain .work2 figure {
+  background: url(../img/logo/nemu.png) center center/50% no-repeat;
+  border: dashed 5px #612674;
+}
+main #worksWrap .worksmain .work2 figure img {
+  transition: 0.3s ease-in-out;
+  opacity: 0;
+  display: block;
+}
+main #worksWrap .worksmain .work2 figure:hover img {
+  opacity: 1;
+}
+main #worksWrap .worksmain .work3 figure {
+  background: url(../img/logo/62resto.png) center center/cover no-repeat;
+  border: dashed 5px #cac5ab;
+}
+main #worksWrap .worksmain .work3 figure img {
+  transition: 0.3s ease-in-out;
+  opacity: 0;
+  display: block;
+}
+main #worksWrap .worksmain .work3 figure:hover img {
+  opacity: 1;
+}
+main #worksWrap .worksmain .work4 figure {
+  background: url(../img/logo/xco.png) center center/50% no-repeat;
+  border: 5px dashed #f3f3f3;
+}
+main #worksWrap .worksmain .work4 figure img {
+  transition: 0.3s ease-in-out;
+  opacity: 0;
+  display: block;
+}
+main #worksWrap .worksmain .work4 figure:hover img {
+  opacity: 1;
+}
+main #worksWrap .worksmain .work5 figure {
+  background: url(../img/logo/tdl.png) center center/100% no-repeat;
+  border: dashed 5px skyblue;
+}
+main #worksWrap .worksmain .work5 figure img {
+  transition: 0.3s ease-in-out;
+  opacity: 0;
+  display: block;
+}
+main #worksWrap .worksmain .work5 figure:hover img {
+  opacity: 1;
+}
+main #cntctWrap {
+  width: 100%;
+  height: 100vh;
+  margin: 0 auto;
+  padding: 20px;
+}
+main #cntctWrap .cntctTtl {
+  border-bottom: 3px #C11717 solid;
+  width: 10%;
+  text-align: center;
+  margin-bottom: 20px;
+}
+main #cntctWrap .inputWrap {
+  display: flex;
+  flex-wrap: nowrap;
+}
+main #cntctWrap .inputWrap span {
+  font-family: "DotGothic16", sans-serif;
+}
+main #cntctWrap .inputWrap .inputBox {
+  margin: 0 auto;
+  position: relative;
+  width: 250px;
+  font-family: "DotGothic16", sans-serif;
+}
+main #cntctWrap .inputWrap .inputBox input {
+  width: 100%;
+  padding: 10px;
+  border-bottom: 2px solid #C11717;
+  outline: none;
+  color: #F5f5f5;
+  font-size: 0.8em;
+}
+main #cntctWrap .inputWrap .inputBox input:valid ~ span, main #cntctWrap .inputWrap .inputBox input:focus ~ span {
+  color: #C11717;
+  transform: translateX(-10px) translateY(-10px);
+  font-size: 0.6em;
+  padding: 0 10px;
+  background: none;
+  letter-spacing: 0.2em;
+}
+main #cntctWrap .inputWrap .inputBox span {
+  position: absolute;
+  left: 0;
+  padding: 10px;
+  pointer-events: none;
+  font-size: 0.8em;
+  color: #807979;
+  text-transform: uppercase;
+  transition: 0.3s ease-in-out;
 }
 
 /*# sourceMappingURL=style.css.map */
