--- a/scss/style.scss
+++ b/scss/style.scss
@@ -246,7 +246,7 @@ main {
             }
             .classcode{
                 display: block;
-                width: 100%;
+                width: 90%;
                 &:hover{
                     background: #1f2935;
                 }
@@ -292,13 +292,137 @@ main {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             grid-template-rows: repeat(3, 1fr);
-            gap: 30px;
+            gap: 50px;
 
             figure {
                 width: 100%;
-
                 img {
                     width: 100%;
+                }
+            }
+            .work1{
+                figure{
+                    background: url(../img/logo/chittle.png) left top / cover no-repeat;
+                    border: dashed 5px #33a864;
+                    img{
+                        transition: 0.3s ease-in-out;
+                        opacity: 0;
+                        display: block;
+                    }
+                    &:hover img{
+                        opacity: 1;
+                    }
+                }
+            }
+            .work2{
+                figure{
+                    background: url(../img/logo/nemu.png) center center / 50% no-repeat;
+                    border: dashed 5px #612674;
+                    img{
+                        transition: 0.3s ease-in-out;
+                        opacity: 0;
+                        display: block;
+                    }
+                    &:hover img{
+                        opacity: 1;
+                    }
+                }
+            }
+            .work3{
+                figure{
+                    background: url(../img/logo/62resto.png) center center / cover no-repeat;
+                    border: dashed 5px #cac5ab;
+                    img{
+                        transition: 0.3s ease-in-out;
+                        opacity: 0;
+                        display: block;
+                    }
+                    &:hover img{
+                        opacity: 1;
+                    }
+                }
+            }
+            .work4{
+                figure{
+                    background: url(../img/logo/xco.png) center center / 50% no-repeat;
+                    border: 5px dashed #f3f3f3;
+                    img{
+                        transition: 0.3s ease-in-out;
+                        opacity: 0;
+                        display: block;
+                    }
+                    &:hover img{
+                        opacity: 1;
+                    }
+                }
+            }
+            .work5{
+                figure{
+                    background: url(../img/logo/tdl.png) center center / 100% no-repeat;
+                    border: dashed 5px skyblue;
+                    img{
+                        transition: 0.3s ease-in-out;
+                        opacity: 0;
+                        display: block;
+                    }
+                    &:hover img{
+                        opacity: 1;
+                    }
+                }
+            }
+        }
+    }
+
+    #cntctWrap{
+        width: 100%;
+        height: 100vh;
+        margin: 0 auto;
+        padding: 20px;
+
+        .cntctTtl{
+            border-bottom: 3px #C11717 solid;
+            width: 10%;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .inputWrap{
+            display: flex;
+            flex-wrap: nowrap;
+            span{
+                font-family: 'DotGothic16', sans-serif;
+            }
+            .inputBox{
+                margin: 0 auto;
+                position: relative;
+                width: 250px;
+                font-family: 'DotGothic16', sans-serif;
+                input{
+                    width: 100%;
+                    padding: 10px;
+                    border-bottom: 2px solid #C11717;
+                    outline: none;
+                    color: #F5f5f5;
+                    font-size: 0.8em;
+                    &:valid ~ span,
+                    &:focus ~ span{
+                        color: #C11717;
+                        transform: translateX(-10px) translateY(-10px) ;
+                        font-size: 0.6em;
+                        padding: 0 10px;
+                        background: none;
+                        letter-spacing: 0.2em;
+                    }
+                }
+                span{
+                    position: absolute;
+                    left: 0;
+                    padding: 10px;
+                    pointer-events: none;
+                    font-size: 0.8em;
+                    color: #807979;
+                    text-transform: uppercase;
+                    transition: 0.3s ease-in-out;
                 }
             }
         }
