inserting text stroke

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@ body {
     color: #F5f5f5;
     height: 100%;
     width: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -77,30 +78,40 @@ body {
     width: 100%;
 }
 
+.active{
+    background: #C11717;
+    transition: 0.2s ease-in-out;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+.border{
+    border: #C11717 5px solid;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 1000;
+    pointer-events: none;
+}
+
 header {
-    width: 75%;
+    width: 100%;
     margin: 0 auto;
     height: 100px;
-    padding: 10px;
+    position: fixed;
+    z-index: 100;
 
     .navi {
         display: flex;
         flex-wrap: nowrap;
         align-items: center;
-        margin-top: 20px;
-
-        .ttl {
-            position: relative;
-            width: 30%;
-            text-align: center;
-            border-bottom: 3px solid #C11717;
-            font-size: 1.1rem;
-        }
 
         .gblNavi {
             position: fixed;
-            right: 190px;
-            z-index: 1000;
+            right: 20px;
+            top: 10px;
 
             ul {
                 display: flex;
@@ -112,7 +123,6 @@ header {
                     width: 100px;
                     height: 100%;
                     text-align: center;
-
 
                     a {
                         display: block;
@@ -144,18 +154,49 @@ main {
     height: 100%;
     margin: 0 auto;
 
+    .ttl {
+        position: relative;
+        width: 30%;
+        text-align: center;
+        border-bottom: 3px solid #C11717;
+        font-size: 1rem;
+        top: 30px;
+    }
+
     .mainVis {
         height: 100vh;
+        
 
         #mainTxt {
-            top: 15rem;
+            top: 20%;
             position: relative;
             width: 50%;
+            height: 100%;
 
             h2 {
                 font-size: 3rem;
             }
 
+            #svg {
+                position: relative;
+                top: 10px;
+                &,path{
+                    fill: none ;
+                    stroke: #C11717;
+                    stroke-width: 5px;
+                    stroke-dasharray: 710px;
+                    stroke-dashoffset: 650px;
+                    stroke-linecap:round ;
+                    stroke-linejoin: round;
+                    animation: drawStroke 3s linear forwards;
+                }
+                @keyframes drawStroke{
+                    100%{
+                        stroke-dashoffset: 0;
+                    }
+                }
+
+            }
             p {
                 font-size: 1.7rem;
             }
@@ -244,29 +285,37 @@ main {
                 margin: auto;
                 text-align: end;
             }
-            .classcode{
+
+            .classcode {
                 display: block;
                 width: 90%;
-                &:hover{
+
+                &:hover {
                     background: #1f2935;
                 }
-                .classbrckt{
+
+                .classbrckt {
                     color: #e5c07b;
                 }
-                .classtype{
+
+                .classtype {
                     color: #61afef;
                 }
-                .classel{
+
+                .classel {
                     color: #e06c75;
                 }
-                .classprod{
+
+                .classprod {
                     color: #c678dd;
                 }
-                .classhead{
+
+                .classhead {
                     color: #98c379;
                 }
-                .classrtrn{
-                    color: #55c9ba ;
+
+                .classrtrn {
+                    color: #55c9ba;
                 }
             }
         }
@@ -296,76 +345,92 @@ main {
 
             figure {
                 width: 100%;
+
                 img {
                     width: 100%;
                 }
             }
-            .work1{
-                figure{
+
+            .work1 {
+                figure {
                     background: url(../img/logo/chittle.png) left top / cover no-repeat;
                     border: dashed 5px #33a864;
-                    img{
+
+                    img {
                         transition: 0.3s ease-in-out;
                         opacity: 0;
                         display: block;
                     }
-                    &:hover img{
+
+                    &:hover img {
                         opacity: 1;
                     }
                 }
             }
-            .work2{
-                figure{
+
+            .work2 {
+                figure {
                     background: url(../img/logo/nemu.png) center center / 50% no-repeat;
                     border: dashed 5px #612674;
-                    img{
+
+                    img {
                         transition: 0.3s ease-in-out;
                         opacity: 0;
                         display: block;
                     }
-                    &:hover img{
+
+                    &:hover img {
                         opacity: 1;
                     }
                 }
             }
-            .work3{
-                figure{
+
+            .work3 {
+                figure {
                     background: url(../img/logo/62resto.png) center center / cover no-repeat;
                     border: dashed 5px #cac5ab;
-                    img{
+
+                    img {
                         transition: 0.3s ease-in-out;
                         opacity: 0;
                         display: block;
                     }
-                    &:hover img{
+
+                    &:hover img {
                         opacity: 1;
                     }
                 }
             }
-            .work4{
-                figure{
+
+            .work4 {
+                figure {
                     background: url(../img/logo/xco.png) center center / 50% no-repeat;
                     border: 5px dashed #f3f3f3;
-                    img{
+
+                    img {
                         transition: 0.3s ease-in-out;
                         opacity: 0;
                         display: block;
                     }
-                    &:hover img{
+
+                    &:hover img {
                         opacity: 1;
                     }
                 }
             }
-            .work5{
-                figure{
+
+            .work5 {
+                figure {
                     background: url(../img/logo/tdl.png) center center / 100% no-repeat;
                     border: dashed 5px skyblue;
-                    img{
+
+                    img {
                         transition: 0.3s ease-in-out;
                         opacity: 0;
                         display: block;
                     }
-                    &:hover img{
+
+                    &:hover img {
                         opacity: 1;
                     }
                 }
@@ -373,48 +438,53 @@ main {
         }
     }
 
-    #cntctWrap{
+    #cntctWrap {
         width: 100%;
         height: 100vh;
         margin: 0 auto;
         padding: 20px;
 
-        .cntctTtl{
+        .cntctTtl {
             border-bottom: 3px #C11717 solid;
             width: 10%;
             text-align: center;
             margin-bottom: 20px;
         }
 
-        .inputWrap{
+        .inputWrap {
             display: flex;
             flex-wrap: nowrap;
-            span{
+
+            span {
                 font-family: 'DotGothic16', sans-serif;
             }
-            .inputBox{
+
+            .inputBox {
                 margin: 0 auto;
                 position: relative;
                 width: 250px;
                 font-family: 'DotGothic16', sans-serif;
-                input{
+
+                input {
                     width: 100%;
                     padding: 10px;
                     border-bottom: 2px solid #C11717;
                     outline: none;
                     color: #F5f5f5;
                     font-size: 0.8em;
-                    &:valid ~ span,
-                    &:focus ~ span{
+
+                    &:valid~span,
+                    &:focus~span {
                         color: #C11717;
-                        transform: translateX(-10px) translateY(-10px) ;
+                        transform: translateX(-10px) translateY(-10px);
                         font-size: 0.6em;
                         padding: 0 10px;
                         background: none;
                         letter-spacing: 0.2em;
                     }
                 }
-                span{
+
+                span {
                     position: absolute;
                     left: 0;
                     padding: 10px;
