--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
   color: #F5f5f5;
   height: 100%;
   width: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -67,29 +68,40 @@ body {
   width: 100%;
 }
 
+.active {
+  background: #C11717;
+  transition: 0.2s ease-in-out;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+.border {
+  border: #C11717 5px solid;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 1000;
+  pointer-events: none;
+}
+
 header {
-  width: 75%;
+  width: 100%;
   margin: 0 auto;
   height: 100px;
-  padding: 10px;
+  position: fixed;
+  z-index: 100;
 }
 header .navi {
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
-  margin-top: 20px;
-}
-header .navi .ttl {
-  position: relative;
-  width: 30%;
-  text-align: center;
-  border-bottom: 3px solid #C11717;
-  font-size: 1.1rem;
 }
 header .navi .gblNavi {
   position: fixed;
-  right: 190px;
-  z-index: 1000;
+  right: 20px;
+  top: 10px;
 }
 header .navi .gblNavi ul {
   display: flex;
@@ -124,16 +136,44 @@ main {
   height: 100%;
   margin: 0 auto;
 }
+main .ttl {
+  position: relative;
+  width: 30%;
+  text-align: center;
+  border-bottom: 3px solid #C11717;
+  font-size: 1rem;
+  top: 30px;
+}
 main .mainVis {
   height: 100vh;
 }
 main .mainVis #mainTxt {
-  top: 15rem;
+  top: 20%;
   position: relative;
   width: 50%;
+  height: 100%;
 }
 main .mainVis #mainTxt h2 {
   font-size: 3rem;
+}
+main .mainVis #mainTxt #svg {
+  position: relative;
+  top: 10px;
+}
+main .mainVis #mainTxt #svg, main .mainVis #mainTxt #svg path {
+  fill: none;
+  stroke: #C11717;
+  stroke-width: 5px;
+  stroke-dasharray: 710px;
+  stroke-dashoffset: 650px;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  animation: drawStroke 3s linear forwards;
+}
+@keyframes drawStroke {
+  100% {
+    stroke-dashoffset: 0;
+  }
 }
 main .mainVis #mainTxt p {
   font-size: 1.7rem;
