--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,40 @@ body {
   height: 100%;
   width: 100%;
   scroll-behavior: smooth;
+  cursor: none;
 }
 
 body {
   background: linear-gradient(to left, #262a2f 0%, #090A0F 50%, #1B2735 100%);
+}
+
+.inner-cursor {
+  position: fixed;
+  left: 10px;
+  width: 20px;
+  height: 20px;
+  transform: translate(-50%, -50%);
+  background-color: #C11717;
+  box-shadow: 0 0 20px #dc2727, 0 0 60px #dc2727;
+  mix-blend-mode: difference;
+  border-radius: 50%;
+  pointer-events: none;
+  transition: width 0.5s, height 0.5s;
+  animation: color 5s infinite;
+  z-index: 1000;
+}
+.inner-cursor.grow {
+  width: 30px;
+  height: 30px;
+  transition: width 0.5s, height 0.5s;
+}
+@keyframes color {
+  0% {
+    filter: hue-rotate(0deg);
+  }
+  100% {
+    filter: hue-rotate(360deg);
+  }
 }
 
 #background {
@@ -16,6 +46,7 @@ body {
 }
 #background #stars {
   position: fixed;
+  z-index: -1000;
 }
 
 #arrow {
@@ -91,7 +122,7 @@ header {
   margin: 0 auto;
   height: 100px;
   position: fixed;
-  z-index: 100;
+  z-index: 10;
 }
 header .navi {
   display: flex;
@@ -187,7 +218,7 @@ main #aboutWrap {
 main #aboutWrap .aboutTtl {
   font-size: 1.2rem;
   border-bottom: #C11717 3px solid;
-  width: 8%;
+  width: 12%;
   text-align: center;
   margin-bottom: 20px;
 }
@@ -227,7 +258,7 @@ main #profWrap {
 main #profWrap .profTtl {
   font-size: 1.2rem;
   border-bottom: #C11717 3px solid;
-  width: 10%;
+  width: 14%;
   text-align: center;
   margin-bottom: 20px;
 }
@@ -282,7 +313,7 @@ main #worksWrap {
 }
 main #worksWrap .worksttl {
   border-bottom: 3px #C11717 solid;
-  width: 10%;
+  width: 14%;
   text-align: center;
   margin-bottom: 20px;
 }
@@ -366,7 +397,7 @@ main #cntctWrap {
 }
 main #cntctWrap .cntctTtl {
   border-bottom: 3px #C11717 solid;
-  width: 10%;
+  width: 18%;
   text-align: center;
   margin-bottom: 20px;
 }
