--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,10 +5,41 @@ body {
     height: 100%;
     width: 100%;
     scroll-behavior: smooth;
+    cursor: none;
 }
 
 body {
     background: linear-gradient(to left, #262a2f 0%, #090A0F 50%, #1B2735 100%, );
+}
+
+.inner-cursor{
+    position: fixed;
+    left: 10px;
+    width: 20px;
+    height: 20px;
+    transform: translate(-50%,-50%);
+    background-color: #C11717;
+    box-shadow: 0 0 20px #dc2727,
+    0 0 60px #dc2727;
+    mix-blend-mode: difference;
+    border-radius: 50%;
+    pointer-events: none;
+    transition: width 0.5s, height 0.5s;
+    animation: color 5s infinite;
+    z-index: 1000;
+    &.grow{
+        width: 30px;
+        height: 30px;
+        transition: width 0.5s ,height 0.5s;
+    }
+    @keyframes color {
+        0%{
+            filter: hue-rotate(0deg);
+        }
+        100%{
+            filter: hue-rotate(360deg);
+        }
+    }
 }
 
 #background {
@@ -16,6 +47,7 @@ body {
 
     #stars {
         position: fixed;
+        z-index: -1000;
     }
 }
 
@@ -101,7 +133,7 @@ header {
     margin: 0 auto;
     height: 100px;
     position: fixed;
-    z-index: 100;
+    z-index: 10;
 
     .navi {
         display: flex;
@@ -166,7 +198,6 @@ main {
     .mainVis {
         height: 100vh;
         
-
         #mainTxt {
             top: 20%;
             position: relative;
@@ -213,7 +244,7 @@ main {
         .aboutTtl {
             font-size: 1.2rem;
             border-bottom: #C11717 3px solid;
-            width: 8%;
+            width: 12%;
             text-align: center;
             margin-bottom: 20px;
         }
@@ -261,7 +292,7 @@ main {
         .profTtl {
             font-size: 1.2rem;
             border-bottom: #C11717 3px solid;
-            width: 10%;
+            width: 14%;
             text-align: center;
             margin-bottom: 20px;
         }
@@ -327,11 +358,9 @@ main {
         margin: 0 auto;
         padding: 20px;
 
-
-
         .worksttl {
             border-bottom: 3px #C11717 solid;
-            width: 10%;
+            width: 14%;
             text-align: center;
             margin-bottom: 20px;
 
@@ -446,7 +475,7 @@ main {
 
         .cntctTtl {
             border-bottom: 3px #C11717 solid;
-            width: 10%;
+            width: 18%;
             text-align: center;
             margin-bottom: 20px;
         }
