--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,8 @@ main .mainVis #mainTxt #svg {
   position: relative;
   top: 10px;
 }
-main .mainVis #mainTxt #svg, main .mainVis #mainTxt #svg path {
+main .mainVis #mainTxt #svg,
+main .mainVis #mainTxt #svg path {
   fill: none;
   stroke: #C11717;
   stroke-width: 5px;
@@ -292,18 +293,24 @@ main .profMain .classwrap .classcode .classbrckt {
 }
 main .profMain .classwrap .classcode .classtype {
   color: #61afef;
+  margin-left: 65px;
 }
 main .profMain .classwrap .classcode .classel {
-  color: #e06c75;
+  color: #C11717;
 }
 main .profMain .classwrap .classcode .classprod {
   color: #c678dd;
 }
 main .profMain .classwrap .classcode .classhead {
   color: #98c379;
+  margin-left: 100px;
 }
 main .profMain .classwrap .classcode .classrtrn {
   color: #55c9ba;
+  margin-left: 100px;
+}
+main .profMain .classwrap .classcode .classname {
+  color: #e06c75;
 }
 main #worksWrap {
   width: 100%;
@@ -391,7 +398,7 @@ main #worksWrap .worksmain .work5 figure:hover img {
 }
 main #cntctWrap {
   width: 100%;
-  height: 100vh;
+  height: 80vh;
   margin: 0 auto;
   padding: 20px;
 }
@@ -402,8 +409,17 @@ main #cntctWrap .cntctTtl {
   margin-bottom: 20px;
 }
 main #cntctWrap .inputWrap {
+  padding: 20px;
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
+  width: 80%;
+  height: 80%;
+  margin: 0 auto;
+  margin-top: 50px;
+  background: #232f3a;
+  border-radius: 10px;
+  -webkit-box-shadow: 5px 5px 5px 0px #1f2935, inset 4px 4px 15px 0px #1f2935, 5px 5px 15px 5px #3a414a;
+  box-shadow: 5px 5px 5px 0px #1f2935, inset 4px 4px 15px 0px #1f2935, 5px 5px 15px 5px #3a414a;
 }
 main #cntctWrap .inputWrap span {
   font-family: "DotGothic16", sans-serif;
@@ -411,24 +427,34 @@ main #cntctWrap .inputWrap span {
 main #cntctWrap .inputWrap .inputBox {
   margin: 0 auto;
   position: relative;
-  width: 250px;
+  width: 40%;
+  height: 20%;
   font-family: "DotGothic16", sans-serif;
+  top: 5%;
 }
 main #cntctWrap .inputWrap .inputBox input {
   width: 100%;
   padding: 10px;
-  border-bottom: 2px solid #C11717;
   outline: none;
   color: #F5f5f5;
   font-size: 0.8em;
 }
 main #cntctWrap .inputWrap .inputBox input:valid ~ span, main #cntctWrap .inputWrap .inputBox input:focus ~ span {
   color: #C11717;
-  transform: translateX(-10px) translateY(-10px);
+  transform: translateX(2px) translateY(-17px);
   font-size: 0.6em;
   padding: 0 10px;
   background: none;
   letter-spacing: 0.2em;
+}
+main #cntctWrap .inputWrap .inputBox input:focus ~ .line {
+  background-color: #C11717;
+}
+main #cntctWrap .inputWrap .inputBox .line {
+  width: 100%;
+  background-color: #f5f5f5;
+  height: 2px;
+  transition: 0.2s ease-in-out;
 }
 main #cntctWrap .inputWrap .inputBox span {
   position: absolute;
@@ -436,9 +462,58 @@ main #cntctWrap .inputWrap .inputBox span {
   padding: 10px;
   pointer-events: none;
   font-size: 0.8em;
-  color: #807979;
+  color: #c8c8c8;
   text-transform: uppercase;
   transition: 0.3s ease-in-out;
+}
+main #cntctWrap .inputWrap .txtarea {
+  width: 90%;
+  height: 10%;
+  margin: 0 auto;
+  position: relative;
+}
+main #cntctWrap .inputWrap .txtarea textarea {
+  width: 100%;
+  padding: 10px;
+  outline: none;
+  color: #F5f5f5;
+  font-size: 0.8em;
+  resize: none;
+}
+main #cntctWrap .inputWrap .txtarea textarea:valid ~ span, main #cntctWrap .inputWrap .txtarea textarea:focus ~ span {
+  color: #C11717;
+  transform: translateX(2px) translateY(-17px);
+  font-size: 0.6em;
+  padding: 0 10px;
+  background: none;
+  letter-spacing: 0.2em;
+}
+main #cntctWrap .inputWrap .txtarea textarea:focus ~ .line {
+  background-color: #C11717;
+}
+main #cntctWrap .inputWrap .txtarea .line {
+  width: 100%;
+  background-color: #f5f5f5;
+  height: 2px;
+  transition: 0.2s ease-in-out;
+}
+main #cntctWrap .inputWrap .txtarea span {
+  position: absolute;
+  left: 5px;
+  top: -10px;
+  padding: 10px;
+  pointer-events: none;
+  font-size: 0.8em;
+  color: #c8c8c8;
+  text-transform: uppercase;
+  transition: 0.3s ease-in-out;
+}
+main #cntctWrap .inputWrap .btn {
+  margin: 0 auto;
+  width: 20%;
+  height: 10%;
+  text-align: center;
+  border: solid 1px tomato;
 }
 
 /*# sourceMappingURL=style.css.map */
