--- a/css/style.css
+++ b/css/style.css
@@ -119,33 +119,29 @@ body {
 
 header {
   width: 100%;
-  margin: 0 auto;
   height: 100px;
-  position: fixed;
   z-index: 10;
+  position: fixed;
 }
 header .navi {
-  display: flex;
-  flex-wrap: nowrap;
-  align-items: center;
-}
-header .navi .gblNavi {
-  position: fixed;
-  right: 20px;
+  position: inherit;
   top: 10px;
+  right: 30px;
 }
-header .navi .gblNavi ul {
+header .navi ul {
   display: flex;
-  gap: 30px;
   list-style: none;
   font-size: 1.3rem;
 }
-header .navi .gblNavi ul li {
+header .navi ul li {
   width: 100px;
-  height: 100%;
+  height: 40px;
   text-align: center;
 }
-header .navi .gblNavi ul li a {
+header .navi ul li a {
+  margin: 0 auto;
+  position: inherit;
+  width: 90%;
   display: block;
   text-decoration: none;
   border-bottom: 2px solid #C11717;
@@ -156,7 +152,7 @@ header .navi .gblNavi ul li a {
   background-repeat: no-repeat;
   transition: background-size 0.2s, background-position 0.2s 0.2s;
 }
-header .navi .gblNavi ul li a:hover {
+header .navi ul li a:hover {
   transition: background-size 0.2s 0.2s, background-position 0.2s;
   background-size: 200% 100%;
   background-position: 100% 100%;
@@ -233,7 +229,7 @@ main #aboutWrap .aboutMain .aboutMe {
   height: 50%;
   margin: auto 10;
   position: relative;
-  top: 15%;
+  top: 5%;
 }
 main #aboutWrap .aboutMain .aboutMe p {
   font-family: "DotGothic16", sans-serif;
@@ -337,7 +333,7 @@ main #worksWrap .worksmain figure img {
   width: 100%;
 }
 main #worksWrap .worksmain .work1 figure {
-  background: url(../img/logo/chittle.png) left top/cover no-repeat;
+  background: url(../img/logo/chittle.png) center center/cover no-repeat;
   border: dashed 5px #33a864;
 }
 main #worksWrap .worksmain .work1 figure img {
@@ -507,13 +503,6 @@ main #cntctWrap .inputWrap .txtarea span {
   color: #c8c8c8;
   text-transform: uppercase;
   transition: 0.3s ease-in-out;
-}
-main #cntctWrap .inputWrap .btn {
-  margin: 0 auto;
-  width: 20%;
-  height: 10%;
-  text-align: center;
-  border: solid 1px tomato;
 }
 
 /*# sourceMappingURL=style.css.map */
