--- a/scss/style.scss
+++ b/scss/style.scss
@@ -133,51 +133,46 @@ body {
 
 header {
     width: 100%;
-    margin: 0 auto;
     height: 100px;
-    position: fixed;
     z-index: 10;
+    position: fixed;
 
     .navi {
-        display: flex;
-        flex-wrap: nowrap;
-        align-items: center;
+        position: inherit;
+        top: 10px;
+        right: 30px;
 
-        .gblNavi {
-            position: fixed;
-            right: 20px;
-            top: 10px;
+        ul {
+            display: flex;
+            list-style: none;
+            font-size: 1.3rem;
 
-            ul {
-                display: flex;
-                gap: 30px;
-                list-style: none;
-                font-size: 1.3rem;
+            li {
+                width: 100px;
+                height: 40px;
+                text-align: center;
+                
+                a {
+                    margin: 0 auto;
+                    position: inherit;
+                    width: 90%;
+                    display: block;
+                    text-decoration: none;
+                    border-bottom: 2px solid #C11717;
+                    color: #F5f5f5;
+                    background-image: linear-gradient(#C11717 0 0);
+                    background-size: 200% .08em;
+                    background-position: 200% 100%;
+                    background-repeat: no-repeat;
+                    transition: background-size .2s, background-position .2s .2s;
 
-                li {
-                    width: 100px;
-                    height: 100%;
-                    text-align: center;
-
-                    a {
-                        display: block;
-                        text-decoration: none;
-                        border-bottom: 2px solid #C11717;
-                        color: #F5f5f5;
-                        background-image: linear-gradient(#C11717 0 0);
-                        background-size: 200% .08em;
-                        background-position: 200% 100%;
-                        background-repeat: no-repeat;
-                        transition: background-size .2s, background-position .2s .2s;
-
-                        &:hover {
-                            transition: background-size .2s .2s, background-position .2s;
-                            background-size: 200% 100%;
-                            background-position: 100% 100%;
-                        }
+                    &:hover {
+                        transition: background-size .2s .2s, background-position .2s;
+                        background-size: 200% 100%;
+                        background-position: 100% 100%;
                     }
-
                 }
+
             }
         }
     }
@@ -266,7 +261,7 @@ main {
                 height: 50%;
                 margin: auto 10;
                 position: relative;
-                top: 15%;
+                top: 5%;
 
                 p {
                     font-family: 'DotGothic16', sans-serif;
@@ -396,7 +391,7 @@ main {
 
             .work1 {
                 figure {
-                    background: url(../img/logo/chittle.png) left top / cover no-repeat;
+                    background: url(../img/logo/chittle.png) center center / cover no-repeat;
                     border: dashed 5px #33a864;
 
                     img {
@@ -528,7 +523,7 @@ main {
 
 
                     &:valid~span,
-                    &:focus~span{
+                    &:focus~span {
                         color: #C11717;
                         transform: translateX(2px) translateY(-17px);
                         font-size: 0.6em;
@@ -536,12 +531,14 @@ main {
                         background: none;
                         letter-spacing: 0.2em;
                     }
-                    &:focus~.line{
+
+                    &:focus~.line {
                         background-color: #C11717;
                     }
 
                 }
-                .line{
+
+                .line {
                     width: 100%;
                     background-color: #f5f5f5;
                     height: 2px;
@@ -559,7 +556,7 @@ main {
                     transition: 0.3s ease-in-out;
                 }
 
-                
+
             }
 
             .txtarea {
@@ -567,13 +564,15 @@ main {
                 height: 10%;
                 margin: 0 auto;
                 position: relative;
-                textarea{
+
+                textarea {
                     width: 100%;
                     padding: 10px;
                     outline: none;
                     color: #F5f5f5;
                     font-size: 0.8em;
                     resize: none;
+
                     &:valid~span,
                     &:focus~span {
                         color: #C11717;
@@ -583,16 +582,19 @@ main {
                         background: none;
                         letter-spacing: 0.2em;
                     }
-                    &:focus~.line{
+
+                    &:focus~.line {
                         background-color: #C11717;
                     }
                 }
-                .line{
+
+                .line {
                     width: 100%;
                     background-color: #f5f5f5;
                     height: 2px;
                     transition: 0.2s ease-in-out;
                 }
+
                 span {
                     position: absolute;
                     left: 5px;
@@ -606,13 +608,6 @@ main {
                 }
             }
 
-            .btn{
-                margin: 0 auto;
-                width: 20%;
-                height: 10%;
-                text-align: center;
-                border: solid 1px tomato;
-            }
         }
     }
 }
