--- a/scss/style.scss
+++ b/scss/style.scss
@@ -113,10 +113,7 @@ body {
     width: 100%;
 }
 
-.active {
-    background: #C11717;
-    transition: 0.2s ease-in-out;
-}
+
 
 ::-webkit-scrollbar {
     display: none;
@@ -136,6 +133,11 @@ header {
     height: 100px;
     z-index: 10;
     position: fixed;
+
+    .active {
+        background: #C11717;
+        transition: 0.2s ease-in-out;
+    }
 
     .navi {
         position: inherit;
@@ -368,7 +370,7 @@ main {
     width: 100%;
     margin: 0 auto;
     padding: 20px;
-    border: solid 1px skyblue;
+    border: solid 1px tomato;
 
     .worksttl {
         border-bottom: 3px #C11717 solid;
