--- a/css/test.css
+++ b/css/test.css
@@ -1,8 +1,9 @@
 .slider-container {
     position: relative;
     margin: 0 auto;
-    width: 800px;
+    width: 100%;
     height: 600px;
+    border: solid 1px skyblue;
 }
 
 .slider-container .bullet-container {
@@ -16,11 +17,11 @@
 
 .slider-container .bullet-container .bullet {
     margin-right: 14px;
-    height: 20px;
-    width: 20px;
+    height: 15px;
+    width: 15px;
     border-radius: 50%;
-    background-color: white;
-    opacity: 0.5;
+    background-color: #ffffff;
+    opacity: 0.3;
 }
 
 .slider-container .bullet-container .bullet:last-child {
@@ -52,14 +53,16 @@
 
 .slider-container .slider-content .slider-single .slider-single-image {
     position: relative;
-    left: 0;
+    right: 70px;
     top: 0;
-    width: 100%;
+    margin: 0 auto;
+    width: 120%;
     height: 100%;
     box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.2);
     transition: 500ms cubic-bezier(0.17, 0.67, 0.55, 1.43);
     transform: scale(0);
     opacity: 0;
+    object-fit: contain;
 }
 
 .slider-container .slider-content .slider-single .slider-single-download {
@@ -162,34 +165,27 @@
     position: absolute;
     z-index: 3;
     display: block;
-    right: 85%;
+    
+    left: 0;
     top: 50%;
-    color: #ffffff;
-    transform: translateY(-50%);
-    padding: 20px 15px;
-    border-top: 2px solid #fdc84b;
-    border-right: 2px solid #fdc84b;
-    border-bottom: 2px solid #fdc84b;
-    border-left: 2px solid #fdc84b;
-    margin-right: -2px;
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
 }
 
 .slider-container .slider-right {
     position: absolute;
     z-index: 3;
     display: block;
-    left: 85%;
+    right: 0;
     top: 50%;
-    color: #ffffff;
-    transform: translateY(-50%);
-    padding: 20px 15px;
-    border-top: 2px solid #fdc84b;
-    border-right: 2px solid #fdc84b;
-    border-bottom: 2px solid #fdc84b;
-    border-left: 2px solid #fdc84b;
-    margin-left: -2px;
-}
-
-.slider-container .not-visible {
-    display: none !important;
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;  
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
 }
