--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ body {
   position: fixed;
   bottom: 30px;
   width: 100%;
+  z-index: 10;
 }
 #arrow img {
   display: flex;
@@ -316,7 +317,6 @@ main .ttl {
   width: 100%;
   margin: 0 auto;
   padding: 20px;
-  border: solid 1px tomato;
 }
 #worksWrap .worksttl {
   border-bottom: 3px #C11717 solid;
