--- a/css/test.css
+++ b/css/test.css
@@ -3,7 +3,6 @@
     margin: 0 auto;
     width: 100%;
     height: 600px;
-    border: solid 1px skyblue;
 }
 
 .slider-container .bullet-container {
@@ -16,12 +15,12 @@
 }
 
 .slider-container .bullet-container .bullet {
-    margin-right: 14px;
-    height: 15px;
-    width: 15px;
+    margin-right: 16px;
+    height: 10px;
+    width: 10px;
     border-radius: 50%;
-    background-color: #ffffff;
-    opacity: 0.3;
+    background-color: #f5f5f5;
+    opacity: 0.4;
 }
 
 .slider-container .bullet-container .bullet:last-child {
@@ -89,7 +88,7 @@
 
 .slider-container .slider-content .slider-single .slider-single-title {
     display: block;
-    float: left;
+    float: right;
     margin: 16px 0 0 20px;
     font-size: 1.5rem;
     font-weight: 400;
@@ -109,17 +108,21 @@
 .slider-container .slider-content .slider-single.preactive .slider-single-image {
     opacity: 0.3;
     transform: translateX(-25%) scale(0.8);
+    pointer-events: none;
 }
 
 .slider-container .slider-content .slider-single.preactive .slider-single-download {
     transform: translateX(-150px);
+    pointer-events: none;
 }
 
 .slider-container .slider-content .slider-single.preactive .slider-single-title {
     transform: translateX(-150px);
+    pointer-events: none;
 }
 
 .slider-container .slider-content .slider-single.proactive {
+    pointer-events: none;
     z-index: 1;
 }
 
@@ -165,13 +168,12 @@
     position: absolute;
     z-index: 3;
     display: block;
-    
     left: 0;
     top: 50%;
-    border: solid black;
-    border-width: 0 3px 3px 0;
+    border: solid #f5f5f5;
+    border-width: 0 8px 8px 0;
+    padding: 8px;  
     display: inline-block;
-    padding: 3px;
     transform: rotate(135deg);
     -webkit-transform: rotate(135deg);
 }
@@ -182,10 +184,25 @@
     display: block;
     right: 0;
     top: 50%;
-    border: solid black;
-    border-width: 0 3px 3px 0;
+    border: solid #f5f5f5;
+    border-width: 0 8px 8px 0;
+    padding: 8px;  
     display: inline-block;
-    padding: 3px;  
     transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);
+}
+
+.slider-single h1 a{
+    text-decoration: none;
+    color: #f5f5f5;
+    padding:  5px 10px;
+    border: solid 1px #f5f5f5;
+    border-radius: 5px;
+    display: block;
+    transition: 0.3s ease-in-out;
+}
+
+.slider-single h1 a:hover{
+    color: #333333;
+    background: #f5f5f5;
 }
