--- a/css/style.css
+++ b/css/style.css
@@ -443,5 +443,26 @@ main .ttl {
   text-transform: uppercase;
   transition: 0.3s ease-in-out;
 }
+#cntctWrap .inputWrap .icons {
+  display: flex;
+  gap: 4%;
+  margin: 0 auto;
+  width: 100%;
+  height: 10%;
+  justify-content: center;
+}
+#cntctWrap .inputWrap .icons a {
+  cursor: none;
+  display: block;
+}
+#cntctWrap .inputWrap .icons a svg {
+  width: 40px;
+  height: 40px;
+  fill: #f5f5f5;
+  transition: 0.2s ease-in-out;
+}
+#cntctWrap .inputWrap .icons a svg:hover {
+  fill: #C11717;
+}
 
 /*# sourceMappingURL=style.css.map */
