--- a/scss/style.scss
+++ b/scss/style.scss
@@ -518,6 +518,28 @@ main {
             }
         }
 
+        .icons{
+            display: flex;
+            gap: 4%;
+            margin: 0 auto;
+            width: 100%;
+            height: 10%;
+            justify-content: center;
+            a{
+                cursor: none;
+                display: block;
+                svg{
+                    width: 40px;
+                    height: 40px;
+                    fill: #f5f5f5;
+                    transition: 0.2s ease-in-out;
+                    &:hover{
+                        fill: #C11717;
+                    }
+                }
+            }
+        }
+
     }
 }
 
