--- a/scss/style.scss
+++ b/scss/style.scss
@@ -205,6 +205,8 @@ main {
         position: relative;
         width: 50%;
         height: 100%;
+        margin: 0 auto;
+        text-align: center;
 
         h2 {
             font-size: 3rem;
