--- a/scss/style.scss
+++ b/scss/style.scss
@@ -308,6 +308,9 @@ main {
     .profMain {
         font-size: 1.2rem;
 
+        p{
+            margin-bottom: 3px;
+        }
         .classwrap {
             position: relative;
             z-index: 2;
