--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,9 @@ main .ttl {
 #profWrap .profMain {
   font-size: 1.2rem;
 }
+#profWrap .profMain p {
+  margin-bottom: 3px;
+}
 #profWrap .profMain .classwrap {
   position: relative;
   z-index: 2;
